syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = '.proto';

service Node{
  rpc register(RegisterRequest) returns (google.protobuf.Empty);
  rpc logout(RegisterRequest)returns(google.protobuf.Empty);
}

message RegisterRequest{
  string serviceAddr = 1;
  int64 jobManagerId = 2;
  string jobManagerName = 3;
}

service Job{
  rpc callback(CallbackResponse)returns(google.protobuf.Empty);
}

message CallbackResponse{
  int64  id = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp endTime = 3;
  int32  status = 4;
  repeated string  logs = 5;
}
